plugins {
    id 'fabric-loom' version '1.10-SNAPSHOT'
}

repositories {
    //maven { url 'https://masa.dy.fi/maven' }
    maven { url "https://maven.terraformersmc.com/releases/" }
    mavenLocal()
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.mappings_version}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
    implementation "com.google.code.findbugs:jsr305:3.0.2"

    modImplementation "fi.dy.masa.malilib:malilib-fabric-${project.minecraft_version_out}:${project.malilib_version}"

    // Fabric API. This is technically optional, but you probably want it anyway.
    //modCompile "net.fabricmc.fabric-api:fabric-api:" + project.fabric_version

    modCompileOnly "com.terraformersmc:modmenu:${project.mod_menu_version}"
}

compileJava {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
    options.encoding = 'UTF-8'
}

base {
    group = project.group + "." + project.mod_id
    archivesName = project.mod_file_name + '-' + project.minecraft_version_out
    version = project.mod_version

    if (version.endsWith('-dev')) {
        version += "." + new Date().format('yyyyMMdd.HHmmss')
    }
}

processResources
{
    // Exclude the GIMP image files
    exclude '**/*.xcf'
    exclude '**/xcf'

    // this will ensure that this task is redone when the versions change.
    //inputs.property "mod_version", project.minecraft.mod_version
    //inputs.property "minecraft_version", project.config.minecraft_version

    inputs.property "mod_version", project.mod_version

    filesMatching("fabric.mod.json") {
        expand "mod_version": project.mod_version
    }
}

// ensure that the encoding is set to UTF-8, no matter what the system default is
// this fixes some edge cases with special characters not displaying correctly
// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}
